# minimind-zh2en-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test-streaming.py  test.py
app/: config.py  detector.py  graph.py  run_pipeline.py  vllm_client.py
prompts/: fix_system.txt  translate_system.txt
